docs: refresh CLAUDE.md for array engine + load-test pinning; add RELEASING.md (#28)
CLAUDE.md still named DirectMatchingEngine as the order book; the array-backed engine has been the default since v0.2.0-alpha. Update Key Files + Order Flow, document the MATCH_ENGINE_IMPL / book.capacity / egress byte-bound tunables, and the load-gen core-pinning gotcha (unpinned ~9k vs pinned ~281k orders/sec). Add docs/RELEASING.md capturing the stack-wide tag-only / fast-forward release process.

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>